Cleans trip info data

--- a/trip_info_cleaning.ipynb
+++ b/trip_info_cleaning.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Libraries and dependencies\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
@@ -830,17 +830,30 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "37869fe4",
+   "id": "00907118",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['tripduration', 'bikeid', 'birth year', 'gender', 'ride_id',\n",
-       "       'rideable_type', 'started_at', 'ended_at', 'start_station_name',\n",
-       "       'start_station_id', 'end_station_name', 'end_station_id', 'start_lat',\n",
-       "       'start_lng', 'end_lat', 'end_lng', 'member_casual'],\n",
-       "      dtype='object')"
+       "tripduration                 float64\n",
+       "bikeid                       float64\n",
+       "birth year                   float64\n",
+       "gender                       float64\n",
+       "ride_id                       object\n",
+       "rideable_type                 object\n",
+       "started_at            datetime64[ns]\n",
+       "ended_at              datetime64[ns]\n",
+       "start_station_name            object\n",
+       "start_station_id              object\n",
+       "end_station_name              object\n",
+       "end_station_id                object\n",
+       "start_lat                    float64\n",
+       "start_lng                    float64\n",
+       "end_lat                      float64\n",
+       "end_lng                      float64\n",
+       "member_casual                 object\n",
+       "dtype: object"
       ]
      },
      "execution_count": 5,
@@ -849,17 +862,100 @@
     }
    ],
    "source": [
-    "clean_trip_df.columns"
+    "# Checkind and fixing dtypes\n",
+    "\n",
+    "# Starting with the dates\n",
+    "clean_trip_df['started_at'] = clean_trip_df['started_at'].astype('datetime64[ns]')\n",
+    "clean_trip_df['ended_at'] = clean_trip_df['ended_at'].astype('datetime64[ns]')\n",
+    "\n",
+    "clean_trip_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20096f3a",
+   "execution_count": 6,
+   "id": "ecee2f3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count                       372708\n",
+       "mean     0 days 00:24:36.265978028\n",
+       "std      0 days 06:01:12.895941804\n",
+       "min              -1 days +23:55:19\n",
+       "25%                0 days 00:05:40\n",
+       "50%                0 days 00:10:10\n",
+       "75%         0 days 00:21:27.794000\n",
+       "max              104 days 09:38:11\n",
+       "Name: tripduration, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Trip duration is no longer calculated, but I believe it to be a very interesting fact to have available,\n",
+    "# can be calculated within tableu, but since we are already here\n",
+    "clean_trip_df['tripduration'] = clean_trip_df['ended_at'] - clean_trip_df['started_at']\n",
+    "\n",
+    "clean_trip_df['tripduration'].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bfb8aaa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tripduration          372708\n",
+       "bikeid                210459\n",
+       "birth year            210459\n",
+       "gender                210459\n",
+       "ride_id               162249\n",
+       "rideable_type         162249\n",
+       "started_at            372708\n",
+       "ended_at              372708\n",
+       "start_station_name    372708\n",
+       "start_station_id      372708\n",
+       "end_station_name      372156\n",
+       "end_station_id        372156\n",
+       "start_lat             372708\n",
+       "start_lng             372708\n",
+       "end_lat               372209\n",
+       "end_lng               372209\n",
+       "member_casual         372708\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_trip_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e94506fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_trip_df"
+    "# Data is as clean as it can get witouot tinkering much with it, specially some of the variables \n",
+    "# with null values i'd like to keep\n",
+    "# Exporting to csv\n",
+    "\n",
+    "path = os.path.join('resources', 'clean_trip_info.csv')\n",
+    "\n",
+    "clean_trip_df.to_csv(path)\n"
    ]
   }
  ],
